# webradio

./: CLAUDE.md  Cargo.toml  README.md  REPORT.md  playlist.json  rescan.sh  test.sh
music/: playlist.json
src/: config.rs  direct_stream.rs  error.rs  handlers.rs  lib.rs  main.rs  main_original.rs  monitoring.rs  playlist.rs  radio.rs
src/models/: playlist.rs
src/services/: mod.rs  playlist.rs  streamer copy.rs  streamer.rs  streamer_debug.rs  websocket_bus.rs
src/services/transcoder/: mod.rs
src/utils/: mod.rs  mp3_scanner.rs
static/: diag.html  test.html
static/css/: style.css
static/js/: chrome-player.js  direct-only-player.js  direct-player.js  modular-player.js  optimized-radio-player.js  player-api.js  player-audio.js  player-connection.js  player-control.js  player-core.js  player.js  radio-player.js  unified-player.js  universal-player.js
static/js/player/: audio-manager.js  config.js  ios-manager.js  logger.js  main-player.js  network-manager.js  state.js  ui-manager.js
templates/: chrome.html.tera  error.html.tera  index.html  index.html.tera
tests/: http_integration_tests.rs  integration_tests.rs
