[package]
name = "webradio"
version = "3.0.0"
edition = "2021"
description = "True Radio - Async I/O - Efficient CPU usage with async/await"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# Core web framework
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }

# Async runtime with full features
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1"

# Broadcast streaming
futures = "0.3"
async-stream = "0.3"
bytes = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MP3 metadata and duration parsing
id3 = "1.7.0"
mp3-duration = "0.1.10"

# Utilities
lazy_static = "1.4.0"
parking_lot = "0.12.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.10.0"

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"

[profile.release]
opt-level = 3        # Optimize for speed with async
lto = "thin"         # Thin LTO for better async performance
codegen-units = 8    # More parallelism for async
panic = "unwind"     # Better error handling with async
strip = true
debug = false

[profile.dev]
opt-level = 3       # Some optimization even in dev
lto = "thin"
codegen-units = 8
panic = "unwind"   
strip = true
debug = false