[package]
name = "webradio"
version = "4.0.0"
edition = "2021"
description = "True Radio - Fully Optimized - Minimal CPU usage web radio"
authors = ["Your Name"]
license = "MIT"

[dependencies]
# Core web framework
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }

# Async runtime with full features
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1"

# Broadcast streaming
futures = "0.3"
async-stream = "0.3"
bytes = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MP3 metadata and duration parsing
id3 = "1.7.0"
mp3-duration = "0.1.10"

# Performance optimizations
dashmap = "5.5"         # Lock-free concurrent HashMap
notify = "4.0"          # File system watcher
crossbeam = "0.8"       # Memory pool support

# Utilities
lazy_static = "1.4.0"
parking_lot = "0.12.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.10.0"

# Error handling
thiserror = "1.0"

# System optimization
libc = "0.2"

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Single codegen unit for best optimization
panic = "abort"         # Smaller binary, faster panic
strip = true            # Strip symbols
debug = false           # No debug info

# Enable CPU-specific optimizations
[profile.release.package."*"]
opt-level = 3

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"