[package]
name = "webradio"
version = "5.0.0"
edition = "2021"

[dependencies]
# Core framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MP3 handling
symphonia = { version = "0.5", features = ["mp3"] }

# Utilities
bytes = "1.5"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
arc-swap = "1.6"
async-stream = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Network utilities
hostname = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1